# loco-cli-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs
