[package]
name = "loco-cli"
version = "0.1.0"
edition = "2021"
keywords = ["cli", "localise", "localise.biz"]
categories = ["command-line-utilities"]
readme = "README.md"


[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.1"
indicatif = "0.17.8"
reqwest = "0.12.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
