[package]
name = "loco-cli"
version = "0.1.0"
edition = "2021"
keywords = ["cli", "localise", "localise.biz"]
categories = ["command-line-utilities"]
readme = "README.md"
description = "A tool to manage translations with Localise.biz API"
license = "MIT OR Apache-2.0"
authors = ["Orfeas Voutsaridis <erevos13@gmail.com>"]
repository = "https://github.com/erevos-13/loco-cli-rust"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.1"
indicatif = "0.17.8"
reqwest = "0.12.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
